--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -219,6 +219,79 @@ jobs:
           echo "- **Commit**: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Branch**: ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
 
+  # Deploy to production server
+  deploy-to-server:
+    name: Deploy to Production Server
+    runs-on: ubuntu-latest
+    needs: [deploy-docker-hub]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
+    steps:
+      - name: Deploy to server via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT || 22 }}
+          script: |
+            echo "🚀 Starting deployment..."
+            
+            # Navigate to project directory
+            cd ~/task-management-system || cd /home/${{ secrets.SSH_USER }}/task-management-system
+            
+            # Pull latest code (optional, якщо docker-compose.yml може змінитися)
+            git pull origin main || echo "Skipping git pull"
+            
+            # Login to Docker Hub
+            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+            
+            # Pull latest images
+            echo "📦 Pulling latest Docker images..."
+            docker compose -f docker-compose.prod.yml pull
+            
+            # Stop old containers
+            echo "🛑 Stopping old containers..."
+            docker compose -f docker-compose.prod.yml down
+            
+            # Start new containers
+            echo "✅ Starting new containers..."
+            DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} docker compose -f docker-compose.prod.yml up -d
+            
+            # Wait for services to be ready
+            echo "⏳ Waiting for services to start..."
+            sleep 15
+            
+            # Health check
+            echo "🏥 Running health checks..."
+            curl -f http://localhost:3000/health || echo "Backend health check failed"
+            curl -f http://localhost:8080 || echo "Frontend health check passed"
+            
+            # Show running containers
+            docker compose -f docker-compose.prod.yml ps
+            
+            # Clean up old images
+            echo "🧹 Cleaning up old Docker images..."
+            docker image prune -f
+            
+            echo "✨ Deployment completed successfully!"
+
+      - name: Deployment status notification
+        if: always()
+        run: |
+          echo "## 🚀 Production Deployment" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ job.status }}" == "success" ]; then
+            echo "✅ **Status**: Deployment successful!" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "❌ **Status**: Deployment failed!" >> $GITHUB_STEP_SUMMARY
+          fi
+          echo "- **Server**: \`${{ secrets.SSH_HOST }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **Time**: $(date)" >> $GITHUB_STEP_SUMMARY
+          echo "- **Images deployed**:" >> $GITHUB_STEP_SUMMARY
+          echo "  - \`${{ secrets.DOCKER_USERNAME }}/task-management-backend:latest\`" >> $GITHUB_STEP_SUMMARY
+          echo "  - \`${{ secrets.DOCKER_USERNAME }}/task-management-frontend:latest\`" >> $GITHUB_STEP_SUMMARY
+
   # Build status notification
   build-status:
     name: Build Status
